サイト内容を更新

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 	<header>
 		<div class="theme">
-			<h1>MyProfile</h1>
+		  <a href="#top">MyProfile</a>
 		</div>
 		<nav>
 			<ul>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Works</a></li>
+				<li><a href="#1">About</a></li>
+				<li><a href="#2">Works</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -30,7 +30,7 @@
 			<div class="main-photo">
 				<img src="images/main.png">
 			</div>
-			<section class="about">
+			<section class="about" id="1">
 				<h2>About</h2>
 				<div class="content">
 					<img src="images/about.png">
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="works">
+			<section class="works" id="2">
 				<h2>Works</h2>
 				<div class="content2">
 					<div class="work-item">
